<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_name">St. Paul, MN</string>
    <string name="current_temp">72°</string>
    <string name="feelslike_temp">Feels like 78°</string>
    <string name="low_temp">Low 65°</string>
    <string name="high_temp">High 80°</string>
    <string name="humidity_percent">Humidity 100%</string>
    <string name="pressure_level">Pressure 1023 hPa</string>
    <string name="forecast">Forecast</string>
    <string name="degree_temp">%d°</string>
    <string name="forecast_current_high">High: 80°</string>
    <string name="forecast_current_low">Low: 60°</string>
</resources>